--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,4 +5,9 @@ extends: airbnb-base
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {}
+rules: {
+  import/no-extraneous-dependencies: 
+    error,
+    devDependencies: true
+}
+    
