--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "i18next": "^23.11.4",
     "on-change": "^5.0.1",
     "yup": "^1.4.0"
   }
