--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "axios": "^1.7.1",
     "bootstrap": "^5.3.3",
     "i18next": "^23.11.4",
+    "lodash": "^4.17.21",
     "on-change": "^5.0.1",
     "yup": "^1.4.0"
   }
