--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
+    "@playwright/test": "^1.44.1",
+    "@types/node": "^20.12.12",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.1",
     "eslint": "^8.57.0",
