--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/MikeDruzhin/frontend-project-11/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/MikeDruzhin/frontend-project-11/actions)",
+  "description": "This is a service for aggregating RSS feeds, with which you can read a variety of sources, for example, blogs. It allows you to add an unlimited number of RSS feeds, updates them itself and adds new entries to the general feed.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "webpack serve",
+    "build": "webpack"
   },
   "author": "mikedruzhin",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "@playwright/test": "^1.44.1",
     "@types/node": "^20.12.12",
-    "babel-loader": "^9.1.3",
     "css-loader": "^7.1.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
