--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "mikedruzhin",
   "license": "ISC",
   "devDependencies": {
+    "@playwright/test": "^1.44.1",
     "@types/node": "^20.12.12",
     "css-loader": "^7.1.1",
     "eslint": "^8.57.0",
